[gd_scene load_steps=3 format=3 uid="uid://bqbachg4pcrpt"]

[ext_resource type="Script" path="res://pipes/scripts/pipe_spawner.gd" id="1_fqmjh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lmnn"]
size = Vector2(135, 731)

[node name="PipeSpawner" type="Node"]
script = ExtResource("1_fqmjh")

[node name="IncreaseSpeedTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PipeRemover" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeRemover"]
position = Vector2(-270, 365)
shape = SubResource("RectangleShape2D_3lmnn")

[connection signal="timeout" from="IncreaseSpeedTimer" to="." method="_on_increase_speed_timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
